--- a/Views/EnlargedEventView.xib
+++ b/Views/EnlargedEventView.xib
@@ -66,6 +66,9 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Q9-dO-Wna">
                     <rect key="frame" x="246" y="20" width="18" height="22"/>
                     <state key="normal" image="pencil" catalog="system"/>
+                    <connections>
+                        <action selector="editButtonTapped:" destination="-1" eventType="touchUpInside" id="24u-n3-YgG"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdg-yu-nfH">
                     <rect key="frame" x="214.5" y="20" width="19.5" height="22"/>
